[project]
name = "quantjourney-mcp"
version = "1.1.0"
description = "Connect AI assistants to QuantJourney financial data via MCP"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "requests>=2.28.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
quantjourney-mcp = "server:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["server"]
